// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Button Unit Tests > renders the button with the outlined btnVariant 1`] = `
<button
  btnsize="medium"
  btnvariant="primary"
  class="MuiButtonBase-root MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium css-1ieilu9-MuiButtonBase-root-MuiButton-root"
  tabindex="0"
  type="button"
>
  <div
    class="gradient-bg"
  />
  Click me
  <span
    class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
  />
</button>
`;

exports[`Button Unit Tests > renders the button with the primary btnVariant 1`] = `
<button
  btnsize="medium"
  btnvariant="primary"
  class="MuiButtonBase-root MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium css-1ieilu9-MuiButtonBase-root-MuiButton-root"
  tabindex="0"
  type="button"
>
  <div
    class="gradient-bg"
  />
  Click me
  <span
    class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
  />
</button>
`;

exports[`Button Unit Tests > renders the button with the provided btnSize 1`] = `
<button
  btnsize="medium"
  btnvariant="outlined"
  class="MuiButtonBase-root MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium css-1evtol0-MuiButtonBase-root-MuiButton-root"
  tabindex="0"
  type="button"
>
  <div
    class="gradient-bg"
  />
  Click me
  <span
    class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
  />
</button>
`;

exports[`Button Unit Tests > renders the button with the provided btnVariant 1`] = `
<button
  btnsize="medium"
  btnvariant="primary"
  class="MuiButtonBase-root MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium css-1ieilu9-MuiButtonBase-root-MuiButton-root"
  tabindex="0"
  type="button"
>
  <div
    class="gradient-bg"
  />
  Click me
  <span
    class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
  />
</button>
`;
